src/scss/main.scss
/* ... */
/* don't register clicks with the fontawesome icons
 * this way the click event is registered by the parent and all is well
 */
.far,
.fas,
.fab, {
    pointer-events: none;
}

.clickable:hover,
[data-action] {
    cursor: pointer;
}

/* trash icon is red on hover */
.fa-trash-alt:hover {
    color: $darkred;
    transition: color 0.8s ease;
}

/* font awesome icons color */
.far,
.fas,
.fab {
    color: $maingray;
}

[data-icon='bell'].active {
    color: $elabblue;
}

/* for icons such as pin */
.grayed-out {
    color: $lightgraybutnottoolight;
}

/* caption for tinymce */
.image {
    background: #f5f2f0;
    border: 1px solid $maingray;
    display: inline-block;
    margin: 0 2px 0 1px;
}

.image img {
    margin: 8px 8px 0;
}

.image figcaption {
    margin: 6px 8px;
    text-align: center;
}

/* make the markdown editor full width */
.markdown-textarea {
    width: 100%;
}

/* stylelint-disable selector-no-qualifying-type */
input[type='color'] {
    padding: 5px 10px;
}

.user-badge {
    border: 1px solid #c0c0c0;
    border-radius: 5px;
    font-size: 110%;
    margin-right: 5px;
    padding: 5px;
}

.color-white {
    color: #fff;
}

/* give the togglePassword some borders like input */
.input-border {
    border: 1px solid #ced4da;
}

/* bring the search and user menu a bit more on the left
 * this is the only way I found that works
 * adding row/columns will mess up the left alignment of the navbar
 */
#main-nav {
    background-color: inherit;

    @media (min-width: 992px) {
        height: 43px;
    }
}

/* pure css pie chart based on: https://codepen.io/chriscoyier/pen/RPLqMg */
.pie-chart {
    background: conic-gradient(var(--pie-data));
    border-radius: 50%;
    height: 0;
    padding-right: 20px;
    padding-top: 100%;
    width: 100%;
}

.pie-percent {
    background: var(--bg);
    color: #fff;
    padding: 10px;
    text-align: center;
    text-shadow: 0 0 1px #000;
}

.pie-legend {
    border-collapse: separate;
    display: table;
    list-style: none;

    > li {
        display: table-row;

        > * {
            display: table-cell;
        }
    }
}

.fas,
.far,
.fab {
    font-size: 1.2em;
}

/* this needs to be defined after the previous block */
.fa-2x {
    font-size: 1.6em;
}

/* fix border radius for custom-select. brl = border radius left */
.brl-none {
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
}

/* fix border radius for custom-select. brr = border radius right */
.brr-none {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
}

/* scroll to top of page button */
.floating-middle-right {
    position: fixed;
    right: 0.8%;
    top: calc(100vh - 15rem);

    /* make the up arrow white or we can't see it */
    svg {
        color: #fff;
    }
}

#backToTopButton {
    transition: all 0.5s ease;

    i {
        color: $white;
    }
}

.switch-btn {
    border: 1px solid $lightwhite;
    border-radius: 5px;
    padding: 3px;
}

/* loading spinner */
.lds-dual-ring::after {
    animation: lds-dual-ring 1.3s linear infinite;
    border: 8px solid $elabblue;
    border-color: $elabblue transparent $elabblue transparent;
    border-radius: 50%;
    content: ' ';
    display: block;
    height: 150px;
    margin: 4px;
    width: 150px;
}

@keyframes lds-dual-ring {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* notifications */
.notification {
    border-top: 1px solid $verylightgray;

    .relative-moment {
        color: $lightgray;
        font-size: 80%;
    }
}

.notification[data-ack='0'] {
    background-color: $elabblue;

    span {
        color: $lightwhite;
    }
}

